# mailbox

./: .gitignore  Cargo.toml  README.md  build.rs  cli.ts  db.ts  deno.json  populate.sh
.cargo/: config.toml
.github/workflows/: deploy-shuttle.yml  release.yml  test.yml
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  config.rs  import.rs  main.rs  message_components.rs  message_formatter.rs  truncate.rs
cli/src/tui/: app.rs  input_event.rs  mod.rs  monotonic_counter.rs  multiselect_list.rs  navigable_list.rs  request_counter.rs  tree_list.rs  worker.rs
database/: Cargo.toml
database/src/: backend.rs  database.rs  filter.rs  http_backend.rs  lib.rs  mailbox.rs  message.rs  message_filter.rs  new_message.rs  sqlite_backend.rs
http_server/: .gitignore  Cargo.toml  README.md  Secrets.example.toml
http_server/src/: cli.rs  filter.rs  main.rs
server/: Cargo.toml  README.md  build.rs
server/src/: main.rs
src/: cli.rs  config.rs  database.rs  import.rs  main.rs  message.rs  message_components.rs  message_filter.rs  message_formatter.rs  models.rs  truncate.rs
src/tui/: app.rs  mod.rs  multiselect_list.rs  navigable_list.rs  tree_list.rs  worker.rs
