[package]
name = "mailbox"
version = "0.6.1"
authors = ["Caleb Cox"]
edition = "2021"
description = "Message manager for local commands"
readme = "README.md"
repository = "https://github.com/canac/mailbox"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
chrono-humanize = "0.2.2"
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
crossterm = { version = "0.26.1", default-features = false }
csv = "1.2.1"
directories = "5.0.0"
linkify = "0.9.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
sea-query = { version = "0.28.4", default-features = false, features = ["attr", "backend-sqlite"] }
sea-query-rusqlite = { version = "0.2.0", features = ["with-chrono"]}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sigpipe = "0.1.3"
toml = { version = "0.7.3", default-features = false, features = ["parse"] }
tui = "0.19.0"
unicode-width = "0.1.10"
webbrowser = "0.8.9"

[build-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
clap_complete = "4.2.1"
clap_complete_fig = "4.2.0"
clap_mangen = "0.2.10"
