[workspace]
members = [
  "cli",
  "database",
  "http_server",
]
resolver = "2"

[workspace.package]
version = "0.7.2"
authors = ["Caleb Cox"]
edition = "2021"
description = "Message manager for output from local and remote scripts"
readme = "README.md"
repository = "https://github.com/canac/mailbox"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
clap = { version = "4.2.4", features = ["derive", "env"] }
futures = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros"] }
