[package]
name = "mailbox"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "CLI tool for mailbox messages"
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
default-run = "mailbox"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-humanize = "0.2.2"
clap = { workspace = true, features = ["derive"] }
colored = "2.0.0"
crossterm = { version = "0.26.1", default-features = false }
csv = "1.2.1"
database = { path = "../database" }
directories = "5.0.0"
linkify = "0.9.0"
ratatui = "0.22.0"
serde = { workspace = true }
serde_json = { workspace = true }
sigpipe = "0.1.3"
tokio = { workspace = true }
toml = { version = "0.7.3", default-features = false, features = ["parse"] }
unicode-width = "0.1.10"
webbrowser = "0.8.9"

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
database = { path = "../database" }
