[package]
name = "mailbox"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "CLI tool for mailbox messages"
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
default-run = "mailbox"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-humanize = "0.2.2"
clap = { workspace = true, features = ["derive"] }
colored = "3.1.1"
crossterm = { version = "0.29.0", default-features = false }
csv = "1.2.1"
database = { path = "../database" }
directories = "6.0.0"
linkify = "0.10.0"
ratatui = "0.30.0"
serde = { workspace = true }
serde_json = { workspace = true }
sigpipe = "0.1.3"
tokio = { workspace = true }
toml = { version = "1.0.6", default-features = false, features = ["parse", "serde"] }
unicode-width = "0.2.2"
webbrowser = "1.2.0"

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
database = { path = "../database" }
