[package]
name = "database"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Database for mailbox messages"
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
sea-query = { version = "0.28.4", default-features = false, features = ["attr"] }
sea-query-binder = { version = "0.3.1", features = ["sqlx-any", "sqlx-postgres", "sqlx-sqlite", "with-chrono"] }
serde = { workspace = true }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls"] }
tokio = { workspace = true }

[dev-dependencies]
rstest = "0.18.1"
rstest_reuse = "0.6.0"
