[package]
name = "database"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Database for mailbox messages"
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
sea-query = { version = "0.30.7", default-features = false, features = ["attr", "backend-sqlite"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx-sqlite", "with-chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls"] }
tokio = { workspace = true }

[dev-dependencies]
serde_urlencoded = "0.7.1"

[features]
test-utils = []
