[package]
name = "http_server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "HTTP server for mailbox messages"
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
actix-web = "4.3.1"
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
database = { path = "../database" }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
database = { path = "../database", features = ["test-utils"] }
