[package]
name = "mailbox-server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "mailbox HTTP API server"
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
actix-web = "4.3.1"
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
database = { path = "../database" }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
database = { path = "../database", features = ["test-utils"] }

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
